--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,17 +3,31 @@
 @tailwind utilities;
 
 @keyframes shake {
-    0% { transform: translate(1px, 0); }
-    25% { transform: translate(-1px, 0); }
-    50% { transform: translate(1px, 0); }
-    75% { transform: translate(-1px, 0); }
-    100% { transform: translate(1px, 0); }
+  0% {
+    transform: translate(1px, 0);
+  }
+  25% {
+    transform: translate(-1px, 0);
+  }
+  50% {
+    transform: translate(1px, 0);
+  }
+  75% {
+    transform: translate(-1px, 0);
+  }
+  100% {
+    transform: translate(1px, 0);
+  }
+}
+
+body {
+  overscroll-behavior: none;
 }
 
 .animate-shake {
-    animation: shake 0.5s;
+  animation: shake 0.5s;
 }
 
 .dialog-backdrop {
-    z-index: 9998 !important;
-  }
+  z-index: 9998 !important;
+}
