--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.MuiToolbar-root {
+.MuiToolbar-root:not(.MuiTablePagination-toolbar) {
   display: none !important;
 }
 
